--- a/index.html
+++ b/index.html
@@ -1,235 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Bramos Tree Solution | Charlotte NC Tree Service</title>
-<meta name="description" content="Bramos Tree Solution provides expert tree removal, trimming, stump grinding & storm cleanup in Charlotte NC. Free estimates. Fully insured.">
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
-/* RESET */
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial, sans-serif;}
-body{color:#333;background:#fff;}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+body{background:#0b0b0b;color:#fff;overflow-x:hidden;}
 
 /* HEADER */
-header{background:#0a5a0a;color:#fff;padding:15px 0;position:sticky;top:0;z-index:999;}
-.container{width:92%;max-width:1100px;margin:auto;display:flex;align-items:center;justify-content:space-between;}
-.logo{font-size:1.6em;font-weight:bold;}
-
-/* NAV */
-nav ul{list-style:none;display:flex;gap:20px;}
-nav a{color:#fff;text-decoration:none;font-weight:bold;}
-#nav{display:flex;}
-.hamburger{display:none;flex-direction:column;gap:5px;cursor:pointer;}
-.hamburger span{width:25px;height:3px;background:#fff;}
+header{background:rgba(0,0,0,0.7);backdrop-filter:blur(8px);padding:15px 0;position:sticky;top:0;z-index:999;}
+.container{width:92%;max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:space-between;}
+.logo{font-size:1.8em;font-weight:800;color:#00ff64;text-shadow:0 0 10px #00ff64;}
+nav ul{list-style:none;display:flex;gap:25px;}
+nav a{color:#fff;text-decoration:none;font-weight:500;transition:0.3s;}
+nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
+.hamburger{display:none;flex-direction:column;gap:6px;cursor:pointer;}
+.hamburger span{width:28px;height:3px;background:#00ff64;}
 
 /* HERO */
-.hero{background:url('https://source.unsplash.com/1600x800/?tree-service') center/cover no-repeat;height:70vh;display:flex;align-items:center;justify-content:center;text-align:center;color:#fff;padding:20px;}
-.hero h1{font-size:2.5em;text-shadow:2px 2px 4px rgba(0,0,0,.6);}
-.hero p{margin:15px 0;font-size:1.2em;}
-.btn{background:#ff4500;color:#fff;border:none;padding:14px 28px;font-size:1.1em;cursor:pointer;border-radius:5px;}
+.hero{height:85vh;background:url('https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;position:relative;display:flex;align-items:center;justify-content:center;}
+.hero::after{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.6);}
+.hero-content{position:relative;text-align:center;padding:20px;animation:fadeIn 1.5s ease;}
+.hero h1{font-size:3rem;font-weight:800;text-shadow:0 0 15px #00ff64;}
+.hero p{margin:15px 0;font-size:1.2rem;opacity:0.9;}
+.btn{margin-top:10px;background:linear-gradient(90deg,#00ff64,#009944);padding:15px 28px;border:none;font-size:1.1rem;font-weight:600;color:#000;border-radius:8px;cursor:pointer;box-shadow:0 0 20px #00ff64;transition:.3s;}
+.btn:hover{transform:scale(1.05);box-shadow:0 0 30px #00ff64;}
 
 /* SECTIONS */
-section{padding:60px 0;}
-h2{text-align:center;margin-bottom:25px;font-size:2em;color:#0a5a0a;}
-.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));gap:20px;}
-.grid img{width:100%;border-radius:10px;}
+section{padding:70px 0;text-align:center;}
+h2{font-size:2.2rem;font-weight:700;margin-bottom:25px;color:#00ff64;text-shadow:0 0 10px #00ff64;}
 
-/* CONTACT */
-form{width:90%;max-width:500px;margin:auto;}
-form .group{margin-bottom:15px;}
-form label{font-weight:bold;}
-form input,form textarea{width:100%;padding:10px;border:1px solid #ccc;border-radius:5px;font-size:1em;}
+/* GALLERY */
+.grid{width:90%;max-width:1100px;margin:auto;display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:25px;}
+.grid img{width:100%;height:200px;object-fit:cover;border-radius:12px;box-shadow:0 0 15px rgba(0,255,100,0.3);transition:.4s;}
+.grid img:hover{transform:scale(1.05);box-shadow:0 0 25px #00ff64;}
 
 /* FOOTER */
-footer{background:#f0f0f0;padding:25px 0;text-align:center;font-size:.9em;margin-top:50px;}
+footer{background:#111;padding:25px 0;text-align:center;margin-top:50px;border-top:1px solid #00ff64;}
 
-.call-now{position:fixed;bottom:20px;left:20px;background:#ff4500;color:#fff;padding:15px 20px;font-size:1.1em;border-radius:8px;text-decoration:none;z-index:999;display:none;}
+/* CHAT */
+.chat-widget{position:fixed;bottom:20px;right:20px;width:320px;background:#111;border:1px solid #00ff64;border-radius:12px;box-shadow:0 0 25px rgba(0,255,100,0.4);z-index:999;}
+.chat-header{background:#00ff64;color:#000;padding:12px;font-weight:700;text-align:center;}
+.chat-body{height:250px;overflow-y:auto;padding:12px;}
+.chat-input{display:flex;}
+.chat-input input{flex:1;padding:12px;background:#222;border:none;color:#fff;}
+.chat-input button{background:#00ff64;border:none;padding:12px 18px;cursor:pointer;font-weight:600;}
 
-/* CHATBOX */
-.chat-widget{
-position:fixed;bottom:20px;right:20px;width:300px;background:#fff;
-border:1px solid #ccc;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,.2);
-display:flex;flex-direction:column;overflow:hidden;z-index:999;
-}
-.chat-header{background:#0a5a0a;color:#fff;padding:10px;font-weight:bold;text-align:center;}
-.chat-body{flex:1;padding:10px;height:230px;overflow-y:auto;font-size:.9em;}
-.chat-input{display:flex;border-top:1px solid #ccc;}
-.chat-input input{flex:1;padding:10px;border:none;}
-.chat-input button{padding:10px;background:#0a5a0a;color:#fff;border:none;cursor:pointer;}
+@keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
 
-/* MOBILE */
 @media(max-width:768px){
-nav{display:none;flex-direction:column;background:#0a5a0a;position:absolute;top:60px;right:0;width:200px;padding:20px;}
+nav{display:none;flex-direction:column;background:#000;position:absolute;top:60px;right:0;width:200px;padding:20px;}
 nav.open{display:flex;}
 .hamburger{display:flex;}
-.call-now{display:block;}
 }
 </style>
 </head>
 <body>
 
-<!-- MOBILE CALL BUTTON -->
-<a href="tel:+17046412888" class="call-now">Call Now</a>
-
-<!-- HEADER -->
 <header>
-<div class="container">
-<div class="logo">Bramos Tree Solution</div>
+  <div class="container">
+    <div class="logo">BRAMOS TREE</div>
 
-<nav id="nav">
-<ul>
-<li><a href="#home">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="services.html">Services</a></li>
-<li><a href="#gallery">Gallery</a></li>
-<li><a href="#contact">Get Quote</a></li>
-</ul>
-</nav>
+    <nav id="nav">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="contact.html">Get Quote</a></li>
+      </ul>
+    </nav>
 
-<div class="hamburger" id="hamburger">
-<span></span><span></span><span></span>
-</div>
-</div>
+    <div class="hamburger" id="hamburger">
+      <span></span><span></span><span></span>
+    </div>
+  </div>
 </header>
 
-<!-- HERO -->
 <section class="hero" id="home">
-<div>
-<h1>Charlotte’s Trusted Tree Experts</h1>
-<p>Free Estimates • Fully Insured • Emergency Service Available</p>
-<button class="btn" id="openQuote">Get a Free Quote</button>
-</div>
+  <div class="hero-content">
+    <h1>Charlotte’s Most Trusted Tree Experts</h1>
+    <p>Young • Professional • Fully Insured • Free Estimates</p>
+    <button class="btn" onclick="window.location='contact.html'">Get a Free Quote</button>
+  </div>
 </section>
 
-<!-- ABOUT PREVIEW -->
 <section>
-<h2>Professional Tree Service in Charlotte, NC</h2>
-<p style="max-width:800px;margin:auto;text-align:center;font-size:1.1em;">
-Bramos Tree Solution is Charlotte’s reliable tree care provider. From removal and trimming to stump grinding and storm cleanup, 
-we ensure your property stays safe and beautiful.
-</p>
+  <h2>Professional. Fast. Reliable.</h2>
+  <p style="max-width:850px;margin:auto;font-size:1.1rem;opacity:0.9;">
+    Bramos Tree Solution is a young, modern, high-energy tree service company serving all of Charlotte, NC.  
+    We specialize in safe tree removal, trimming, stump grinding, and emergency storm cleanup — with top-tier customer service.
+  </p>
 </section>
 
-<!-- GALLERY -->
 <section id="gallery">
-<h2>Gallery</h2>
-<div class="grid">
-<img src="https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=800&q=80" alt="">
-<img src="https://images.unsplash.com/photo-1581091870686-cd229d4ec3cd?auto=format&fit=crop&w=800&q=80" alt="">
-<img src="https://images.unsplash.com/photo-1601987077608-3c2e84e6aa55?auto=format&fit=crop&w=800&q=80" alt="">
-<img src="https://images.unsplash.com/photo-1611765084248-ccffba8c5c2c?auto=format&fit=crop&w=800&q=80" alt="">
-</div>
+  <h2>Our Work</h2>
+  <div class="grid">
+    <img src="https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1581091870686-cd229d4ec3cd?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1601987077608-3c2e84e6aa55?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1611765084248-ccffba8c5c2c?auto=format&fit=crop&w=800&q=80">
+  </div>
 </section>
 
-<!-- CONTACT -->
-<section id="contact">
-<h2>Request a Free Quote</h2>
-
-<form action="https://formsubmit.co/ericlane87@gmail.com" method="POST">
-
-<input type="hidden" name="_subject" value="New Quote Request from Bramos Tree Solution Website">
-<input type="hidden" name="_next" value="thankyou.html">
-
-<div class="group">
-<label>Name</label>
-<input type="text" name="name" required>
-</div>
-
-<div class="group">
-<label>Phone</label>
-<input type="text" name="phone" required>
-</div>
-
-<div class="group">
-<label>Email</label>
-<input type="email" name="email" required>
-</div>
-
-<div class="group">
-<label>What service do you need?</label>
-<textarea name="message" rows="4" required></textarea>
-</div>
-
-<button class="btn">Submit Request</button>
-</form>
-</section>
-
-<!-- FOOTER -->
 <footer>
-<p>Bramos Tree Solution • Charlotte, NC • (704) 641-2888</p>
-<p>© 2025 Bramos Tree Solution</p>
+  <p>Bramos Tree Solution • Charlotte, NC • (704) 641-2888</p>
+  <p>© 2025 Bramos Tree Solution</p>
 </footer>
 
-<!-- CHAT WIDGET -->
+<!-- CHAT -->
 <div class="chat-widget" id="chatWidget">
-<div class="chat-header">Chat with us</div>
-<div class="chat-body" id="chatBody"></div>
-<div class="chat-input">
-<input type="text" id="chatInput" placeholder="Ask a question…">
-<button id="chatSend">Send</button>
-</div>
+  <div class="chat-header">Chat with us</div>
+  <div class="chat-body" id="chatBody"></div>
+  <div class="chat-input">
+    <input type="text" id="chatInput" placeholder="Ask a question…">
+    <button id="chatSend">Send</button>
+  </div>
 </div>
 
 <script>
-// HAMBURGER MENU
+// MENU
 const hamburger=document.getElementById('hamburger');
 const nav=document.getElementById('nav');
 hamburger.onclick=()=>nav.classList.toggle('open');
 
-// QUOTE BUTTON SCROLL
-document.getElementById('openQuote').onclick=()=> {
-document.getElementById('contact').scrollIntoView({behavior:'smooth'});
-};
-
-// RULE-BASED CHATBOT
-const rules = [
-  { keywords: ["remove","tree removal","cut down","fell"], response: "Yes! We offer full tree removal, including cleanup. Free estimates available." },
-  { keywords: ["trim","trimming","cut branches","shape"], response: "Yes, we provide tree trimming and shaping services." },
-  { keywords: ["stump","grind","stump grinding"], response: "Yes, we perform stump grinding and root removal." },
-  { keywords: ["storm","emergency","24","after hours"], response: "We offer 24/7 emergency storm cleanup. Call anytime: (704) 641-2888." },
-  { keywords: ["insured","license","licensed","insurance"], response: "Absolutely — Bramos Tree Solution is fully licensed and insured." },
-  { keywords: ["estimate","quote","price","cost"], response: "We provide FREE estimates. Would you like to send your address for a quote?" },
-  { keywords: ["location","where","service area","serve"], response: "We serve all of Charlotte, NC and surrounding areas." },
-  { keywords: ["hello","hi","hey"], response: "Hi there! How can we help with your tree service today?" },
-  { keywords: ["hours","open","availability"], response: "We operate 24/7 for emergencies and 8am–6pm for regular service." }
+// RULE-BASED CHAT
+const rules=[
+  {keywords:["remove","tree removal"],response:"Yes! We offer full tree removal."},
+  {keywords:["trim","trimming"],response:"Yes, we provide trimming & shaping."},
+  {keywords:["stump","grind"],response:"We specialize in stump grinding."},
+  {keywords:["storm","emergency"],response:"We offer 24/7 emergency storm cleanup."},
+  {keywords:["estimate","quote"],response:"We offer FREE estimates."}
 ];
-
-// CHAT ELEMENTS
 const chatInput=document.getElementById('chatInput');
 const chatSend=document.getElementById('chatSend');
 const chatBody=document.getElementById('chatBody');
 
-chatSend.onclick=()=>handleMessage();
-chatInput.onkeypress=(e)=>{ if(e.key==="Enter") handleMessage(); };
+chatSend.onclick=()=>sendMessage();
+chatInput.onkeypress=e=>{if(e.key==="Enter")sendMessage();};
 
-function handleMessage(){
- let msg=chatInput.value.trim();
- if(!msg) return;
-
- chatBody.innerHTML+=`<p><b>You:</b> ${msg}</p>`;
- chatInput.value="";
-
- let botResponse=getBotResponse(msg.toLowerCase());
-
- setTimeout(()=>{
-   chatBody.innerHTML+=`<p><b>Bot:</b> ${botResponse}</p>`;
-   chatBody.scrollTop=chatBody.scrollHeight;
- },400);
+function sendMessage(){
+  let msg=chatInput.value.trim();
+  if(!msg)return;
+  chatBody.innerHTML+=`<div><b>You:</b> ${msg}</div>`;
+  chatInput.value="";
+  let res=findResponse(msg.toLowerCase());
+  setTimeout(()=>{
+    chatBody.innerHTML+=`<div><b>Bot:</b> ${res}</div>`;
+    chatBody.scrollTop=chatBody.scrollHeight;
+  },300);
 }
-
-function getBotResponse(message){
- for(let rule of rules){
-   for(let word of rule.keywords){
-     if(message.includes(word)){
-       return rule.response;
-     }
-   }
- }
- return "Thanks for your message! A team member will reach out shortly.";
+function findResponse(msg){
+  for(let rule of rules){for(let k of rule.keywords){if(msg.includes(k))return rule.response;}}
+  return "Thanks for your message!";
 }
-
 </script>
-
 </body>
 </html>
