--- a/index.html
+++ b/index.html
@@ -12,45 +12,188 @@
 body{background:#0b0b0b;color:#fff;overflow-x:hidden;}
 
 /* HEADER */
-header{background:rgba(0,0,0,0.7);backdrop-filter:blur(8px);padding:15px 0;position:sticky;top:0;z-index:999;}
-.container{width:92%;max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:space-between;}
-.logo{font-size:1.8em;font-weight:800;color:#00ff64;text-shadow:0 0 10px #00ff64;}
-nav ul{list-style:none;display:flex;gap:25px;}
-nav a{color:#fff;text-decoration:none;font-weight:500;transition:0.3s;}
-nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
-.hamburger{display:none;flex-direction:column;gap:6px;cursor:pointer;}
-.hamburger span{width:28px;height:3px;background:#00ff64;}
+header{
+  background:rgba(0,0,0,0.7);
+  backdrop-filter:blur(8px);
+  padding:15px 0;
+  position:sticky;
+  top:0;
+  z-index:999;
+}
+.container{
+  width:92%;
+  max-width:1200px;
+  margin:auto;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+}
+.logo{
+  font-size:1.8em;
+  font-weight:800;
+  color:#00ff64;
+  text-shadow:0 0 10px #00ff64;
+}
+nav ul{
+  list-style:none;
+  display:flex;
+  gap:25px;
+}
+nav a{
+  color:#fff;
+  text-decoration:none;
+  font-weight:500;
+  transition:0.3s;
+}
+nav a:hover{
+  color:#00ff64;
+  text-shadow:0 0 10px #00ff64;
+}
+.hamburger{
+  display:none;
+  flex-direction:column;
+  gap:6px;
+  cursor:pointer;
+}
+.hamburger span{
+  width:28px;
+  height:3px;
+  background:#00ff64;
+}
 
 /* HERO */
-.hero{height:85vh;background:url('https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;position:relative;display:flex;align-items:center;justify-content:center;}
-.hero::after{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.6);}
-.hero-content{position:relative;text-align:center;padding:20px;animation:fadeIn 1.5s ease;}
-.hero h1{font-size:3rem;font-weight:800;text-shadow:0 0 15px #00ff64;}
-.hero p{margin:15px 0;font-size:1.2rem;opacity:0.9;}
-.btn{margin-top:10px;background:linear-gradient(90deg,#00ff64,#009944);padding:15px 28px;border:none;font-size:1.1rem;font-weight:600;color:#000;border-radius:8px;cursor:pointer;box-shadow:0 0 20px #00ff64;transition:.3s;}
-.btn:hover{transform:scale(1.05);box-shadow:0 0 30px #00ff64;}
+.hero{
+  height:85vh;
+  background:url('https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+  position:relative;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+.hero::after{
+  content:'';
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,0.6);
+}
+.hero-content{
+  position:relative;
+  text-align:center;
+  padding:20px;
+  animation:fadeIn 1.5s ease;
+}
+.hero h1{
+  font-size:3rem;
+  font-weight:800;
+  text-shadow:0 0 15px #00ff64;
+}
+.hero p{
+  margin:15px 0;
+  font-size:1.2rem;
+  opacity:0.9;
+}
+.btn{
+  margin-top:10px;
+  background:linear-gradient(90deg,#00ff64,#009944);
+  padding:15px 28px;
+  border:none;
+  font-size:1.1rem;
+  font-weight:600;
+  color:#000;
+  border-radius:8px;
+  cursor:pointer;
+  box-shadow:0 0 20px #00ff64;
+  transition:.3s;
+}
+.btn:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 30px #00ff64;
+}
 
 /* SECTIONS */
-section{padding:70px 0;text-align:center;}
-h2{font-size:2.2rem;font-weight:700;margin-bottom:25px;color:#00ff64;text-shadow:0 0 10px #00ff64;}
+section{
+  padding:70px 0;
+  text-align:center;
+}
+h2{
+  font-size:2.2rem;
+  font-weight:700;
+  margin-bottom:25px;
+  color:#00ff64;
+  text-shadow:0 0 10px #00ff64;
+}
 
 /* FOOTER */
-footer{background:#111;padding:25px 0;text-align:center;margin-top:50px;border-top:1px solid #00ff64;}
+footer{
+  background:#111;
+  padding:25px 0;
+  text-align:center;
+  margin-top:50px;
+  border-top:1px solid #00ff64;
+}
 
 /* CHAT */
-.chat-widget{position:fixed;bottom:20px;right:20px;width:320px;background:#111;border:1px solid #00ff64;border-radius:12px;box-shadow:0 0 25px rgba(0,255,100,0.4);z-index:999;}
-.chat-header{background:#00ff64;color:#000;padding:12px;font-weight:700;text-align:center;}
-.chat-body{height:250px;overflow-y:auto;padding:12px;}
-.chat-input{display:flex;}
-.chat-input input{flex:1;padding:12px;background:#222;border:none;color:#fff;}
-.chat-input button{background:#00ff64;border:none;padding:12px 18px;cursor:pointer;font-weight:600;}
+.chat-widget{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  width:320px;
+  background:#111;
+  border:1px solid #00ff64;
+  border-radius:12px;
+  box-shadow:0 0 25px rgba(0,255,100,0.4);
+  z-index:999;
+}
+.chat-header{
+  background:#00ff64;
+  color:#000;
+  padding:12px;
+  font-weight:700;
+  text-align:center;
+}
+.chat-body{
+  height:250px;
+  overflow-y:auto;
+  padding:12px;
+}
+.chat-input{
+  display:flex;
+}
+.chat-input input{
+  flex:1;
+  padding:12px;
+  background:#222;
+  border:none;
+  color:#fff;
+}
+.chat-input button{
+  background:#00ff64;
+  border:none;
+  padding:12px 18px;
+  cursor:pointer;
+  font-weight:600;
+}
 
-@keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
+/* ANIMATIONS */
+@keyframes fadeIn{
+  from{opacity:0;transform:translateY(20px);}
+  to{opacity:1;transform:translateY(0);}
+}
 
+/* MOBILE */
 @media(max-width:768px){
-nav{display:none;flex-direction:column;background:#000;position:absolute;top:60px;right:0;width:200px;padding:20px;}
-nav.open{display:flex;}
-.hamburger{display:flex;}
+  nav{
+    display:none;
+    flex-direction:column;
+    background:#000;
+    position:absolute;
+    top:60px;
+    right:0;
+    width:200px;
+    padding:20px;
+  }
+  nav.open{display:flex;}
+  .hamburger{display:flex;}
 }
 </style>
 </head>
@@ -79,7 +222,7 @@ nav.open{display:flex;}
   <div class="hero-content">
     <h1>Charlotte’s Most Trusted Tree Experts</h1>
     <p>Young • Professional • Fully Insured • Free Estimates</p>
-    <button class="btn" onclick="window.location='contact.html'">Get a Free Quote</button>
+    <button class="btn" onclick="window.location.href='contact.html'">Get a Free Quote</button>
   </div>
 </section>
 
@@ -107,13 +250,13 @@ nav.open{display:flex;}
 </div>
 
 <script>
-// MENU
-const hamburger=document.getElementById('hamburger');
-const nav=document.getElementById('nav');
-hamburger.onclick=()=>nav.classList.toggle('open');
+// MENU TOGGLE
+const hamburger = document.getElementById('hamburger');
+const nav = document.getElementById('nav');
+hamburger.onclick = () => nav.classList.toggle('open');
 
-// CHAT (RULE-BASED)
-const rules=[
+// RULE-BASED CHAT
+const rules = [
   {keywords:["remove","tree removal"],response:"Yes! We offer full tree removal."},
   {keywords:["trim","trimming"],response:"Yes, we provide trimming & shaping."},
   {keywords:["stump","grind"],response:"We specialize in stump grinding."},
@@ -121,23 +264,26 @@ const rules=[
   {keywords:["estimate","quote"],response:"We offer FREE estimates."}
 ];
 
-const chatInput=document.getElementById('chatInput');
-const chatSend=document.getElementById('chatSend');
-const chatBody=document.getElementById('chatBody');
+const chatInput = document.getElementById('chatInput');
+const chatSend = document.getElementById('chatSend');
+const chatBody = document.getElementById('chatBody');
 
-chatSend.onclick=()=>sendMessage();
-chatInput.onkeypress=e=>{if(e.key==="Enter")sendMessage();};
+chatSend.onclick = () => sendMessage();
+chatInput.onkeypress = e => { if(e.key === "Enter") sendMessage(); };
 
 function sendMessage(){
-  let msg=chatInput.value.trim();
-  if(!msg)return;
-  chatBody.innerHTML+=`<div><b>You:</b> ${msg}</div>`;
-  chatInput.value="";
-  let res=findResponse(msg.toLowerCase());
-  setTimeout(()=>{
-    chatBody.innerHTML+=`<div><b>Bot:</b> ${res}</div>`;
-    chatBody.scrollTop=chatBody.scrollHeight;
-  },300);
+  let msg = chatInput.value.trim();
+  if(!msg) return;
+
+  chatBody.innerHTML += `<div><b>You:</b> ${msg}</div>`;
+  chatInput.value = "";
+
+  let res = findResponse(msg.toLowerCase());
+
+  setTimeout(() => {
+    chatBody.innerHTML += `<div><b>Bot:</b> ${res}</div>`;
+    chatBody.scrollTop = chatBody.scrollHeight;
+  }, 300);
 }
 
 function findResponse(msg){
@@ -146,7 +292,7 @@ function findResponse(msg){
       if(msg.includes(k)) return rule.response;
     }
   }
-  return "Thanks for your message!";
+  return "Thanks for your message! We'll get back to you shortly.";
 }
 </script>
 
