Modify contact form for dynamic thank you page
Updated form action to include a dynamic thank you page link and added a captcha field.

--- a/contact.html
+++ b/contact.html
@@ -92,25 +92,12 @@ a:hover{
 <h1>Request a Free Quote</h1>
 
 <form action="https://formsubmit.co/ericlane87@gmail.com" method="POST">
-
-  <!-- hidden fields -->
   <input type="hidden" name="_subject" value="New Quote Request - Bramos Tree Solution">
-  <input type="hidden" name="_next" value="thankyou.html">
-
-  <label>Name</label>
-  <input type="text" name="name" required>
-
-  <label>Phone</label>
-  <input type="text" name="phone" required>
-
-  <label>Email</label>
-  <input type="email" name="email" required>
-
-  <label>Service Needed</label>
-  <textarea name="message" rows="4" required></textarea>
-
-  <button type="submit">Submit Request</button>
+  <input type="hidden" name="_next" value="https://YOUR_GITHUB_USERNAME.github.io/YOUR_REPO_NAME/thankyou.html">
+  <input type="hidden" name="_captcha" value="false">
+  ...
 </form>
+
 
 <a href="index.html">← Back to Home</a>
 
