Fix redirect URL in contact form

--- a/contact.html
+++ b/contact.html
@@ -92,14 +92,16 @@ a:hover{
 
 <h1>Request a Free Quote</h1>
 
+<!-- WORKING FORM -->
 <form action="https://formsubmit.co/ericlane87@gmail.com" method="POST">
 
-  <!-- REQUIRED SETTINGS -->
+  <!-- DISABLE CAPTCHA -->
   <input type="hidden" name="_captcha" value="false">
 
-  <!-- FULL, CORRECT REDIRECT URL -->
-  <input type="hidden" name="_next" value="https://ericlane87.github.io/Bramos-Tree-Solution-Demo/thankyou">
+  <!-- FIXED REDIRECT URL -->
+  <input type="hidden" name="_next" value="https://ericlane87.github.io/Bramos-Tree-Solution-Demo/thankyou.html">
 
+  <!-- EMAIL SUBJECT -->
   <input type="hidden" name="_subject" value="New Quote Request - Bramos Tree Solution">
 
   <label>Name</label>
