--- a/index.html
+++ b/index.html
@@ -34,37 +34,17 @@ header{
   color:#00ff64;
   text-shadow:0 0 10px #00ff64;
 }
-nav ul{
-  list-style:none;
-  display:flex;
-  gap:25px;
-}
-nav a{
-  color:#fff;
-  text-decoration:none;
-  font-weight:500;
-  transition:0.3s;
-}
-nav a:hover{
-  color:#00ff64;
-  text-shadow:0 0 10px #00ff64;
-}
-.hamburger{
-  display:none;
-  flex-direction:column;
-  gap:6px;
-  cursor:pointer;
-}
-.hamburger span{
-  width:28px;
-  height:3px;
-  background:#00ff64;
-}
+nav ul{list-style:none;display:flex;gap:25px;}
+nav a{color:#fff;text-decoration:none;font-weight:500;transition:0.3s;}
+nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
+
+.hamburger{display:none;flex-direction:column;gap:6px;cursor:pointer;}
+.hamburger span{width:28px;height:3px;background:#00ff64;}
 
 /* HERO */
 .hero{
   height:85vh;
-  background:url('https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+  background:url('https://images.unsplash.com/photo-1518611012118-696072aa579a?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
   position:relative;
   display:flex;
   align-items:center;
@@ -103,24 +83,40 @@ nav a:hover{
   border-radius:8px;
   cursor:pointer;
   box-shadow:0 0 20px #00ff64;
-  transition:.3s;
+  transition:0.3s;
 }
-.btn:hover{
-  transform:scale(1.05);
-  box-shadow:0 0 30px #00ff64;
-}
+.btn:hover{transform:scale(1.05);box-shadow:0 0 30px #00ff64;}
 
 /* SECTIONS */
-section{
-  padding:70px 0;
-  text-align:center;
-}
+section{padding:70px 0;text-align:center;}
 h2{
   font-size:2.2rem;
   font-weight:700;
   margin-bottom:25px;
   color:#00ff64;
   text-shadow:0 0 10px #00ff64;
+}
+
+/* WORK GRID */
+.grid{
+  width:90%;
+  max-width:1100px;
+  margin:auto;
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
+  gap:25px;
+}
+.grid img{
+  width:100%;
+  height:200px;
+  object-fit:cover;
+  border-radius:12px;
+  box-shadow:0 0 15px rgba(0,255,100,0.3);
+  transition:.4s;
+}
+.grid img:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 25px #00ff64;
 }
 
 /* FOOTER */
@@ -132,7 +128,7 @@ footer{
   border-top:1px solid #00ff64;
 }
 
-/* CHAT */
+/* CHAT WIDGET */
 .chat-widget{
   position:fixed;
   bottom:20px;
@@ -142,23 +138,61 @@ footer{
   border:1px solid #00ff64;
   border-radius:12px;
   box-shadow:0 0 25px rgba(0,255,100,0.4);
+  overflow:hidden;
   z-index:999;
+  transition:0.3s;
 }
+
+/* HIDDEN WHEN MINIMIZED */
+.chat-widget.minimized{
+  height:60px;
+  width:200px;
+  cursor:pointer;
+}
+
+/* VIBRATION */
+@keyframes attention{
+  0%{transform:translateX(0);}
+  20%{transform:translateX(-3px);}
+  40%{transform:translateX(3px);}
+  60%{transform:translateX(-3px);}
+  80%{transform:translateX(3px);}
+  100%{transform:translateX(0);}
+}
+
+/* GLOW PULSE */
+@keyframes glow{
+  0%{box-shadow:0 0 10px #00ff64;}
+  50%{box-shadow:0 0 25px #00ff64;}
+  100%{box-shadow:0 0 10px #00ff64;}
+}
+
+.chat-widget.attention{
+  animation:attention .4s ease, glow 2s infinite ease;
+}
+
 .chat-header{
   background:#00ff64;
   color:#000;
   padding:12px;
   font-weight:700;
   text-align:center;
-}
-.chat-body{
-  height:250px;
-  overflow-y:auto;
-  padding:12px;
-}
-.chat-input{
   display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
+.chat-header button{
+  background:#000;
+  color:#00ff64;
+  border:none;
+  font-weight:800;
+  cursor:pointer;
+  padding:3px 8px;
+  border-radius:5px;
+}
+
+.chat-body{height:250px;overflow-y:auto;padding:12px;}
+.chat-input{display:flex;}
 .chat-input input{
   flex:1;
   padding:12px;
@@ -174,24 +208,13 @@ footer{
   font-weight:600;
 }
 
-/* ANIMATIONS */
 @keyframes fadeIn{
   from{opacity:0;transform:translateY(20px);}
   to{opacity:1;transform:translateY(0);}
 }
 
-/* MOBILE */
 @media(max-width:768px){
-  nav{
-    display:none;
-    flex-direction:column;
-    background:#000;
-    position:absolute;
-    top:60px;
-    right:0;
-    width:200px;
-    padding:20px;
-  }
+  nav{display:none;flex-direction:column;background:#000;position:absolute;top:60px;right:0;width:200px;padding:20px;}
   nav.open{display:flex;}
   .hamburger{display:flex;}
 }
@@ -208,6 +231,7 @@ footer{
         <li><a href="#home">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="#work">Our Work</a></li>
         <li><a href="contact.html">Get Quote</a></li>
       </ul>
     </nav>
@@ -229,9 +253,21 @@ footer{
 <section>
   <h2>Professional. Fast. Reliable.</h2>
   <p style="max-width:850px;margin:auto;font-size:1.1rem;opacity:0.9;">
-    Bramos Tree Solution is a young, modern, high-energy tree service company serving all of Charlotte, NC.  
-    We specialize in safe tree removal, trimming, stump grinding, and emergency storm cleanup — with top-tier customer service.
+    Bramos Tree Solution is a young, modern, high-energy tree service company serving all of Charlotte, NC.
+    We specialize in safe tree removal, trimming, stump grinding, and emergency storm cleanup —
+    with top-tier customer service.
   </p>
+</section>
+
+<!-- ⭐ OUR WORK SECTION (BACK ADDED) -->
+<section id="work">
+  <h2>Our Work</h2>
+  <div class="grid">
+    <img src="https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1581091870686-cd229d4ec3cd?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1601987077608-3c2e84e6aa55?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1611765084248-ccffba8c5c2c?auto=format&fit=crop&w=800&q=80">
+  </div>
 </section>
 
 <footer>
@@ -240,8 +276,11 @@ footer{
 </footer>
 
 <!-- CHAT -->
-<div class="chat-widget" id="chatWidget">
-  <div class="chat-header">Chat with us</div>
+<div class="chat-widget minimized attention" id="chatWidget">
+  <div class="chat-header">
+    <span>Chat with us</span>
+    <button id="toggleChat">-</button>
+  </div>
   <div class="chat-body" id="chatBody"></div>
   <div class="chat-input">
     <input type="text" id="chatInput" placeholder="Ask a question…">
@@ -250,13 +289,31 @@ footer{
 </div>
 
 <script>
-// MENU TOGGLE
-const hamburger = document.getElementById('hamburger');
-const nav = document.getElementById('nav');
-hamburger.onclick = () => nav.classList.toggle('open');
+// MENU
+const hamburger=document.getElementById('hamburger');
+const nav=document.getElementById('nav');
+hamburger.onclick=()=>nav.classList.toggle('open');
+
+// CHAT WIDGET
+const chatWidget=document.getElementById('chatWidget');
+const toggleChat=document.getElementById('toggleChat');
+
+// toggle chat open/minimize
+toggleChat.onclick=()=>{
+  chatWidget.classList.toggle('minimized');
+};
+
+// auto popup then minimize
+setTimeout(()=>{
+  chatWidget.classList.remove('minimized');
+},1000);
+
+setTimeout(()=>{
+  chatWidget.classList.add('minimized');
+},3500);
 
 // RULE-BASED CHAT
-const rules = [
+const rules=[
   {keywords:["remove","tree removal"],response:"Yes! We offer full tree removal."},
   {keywords:["trim","trimming"],response:"Yes, we provide trimming & shaping."},
   {keywords:["stump","grind"],response:"We specialize in stump grinding."},
@@ -264,26 +321,23 @@ const rules = [
   {keywords:["estimate","quote"],response:"We offer FREE estimates."}
 ];
 
-const chatInput = document.getElementById('chatInput');
-const chatSend = document.getElementById('chatSend');
-const chatBody = document.getElementById('chatBody');
+const chatInput=document.getElementById('chatInput');
+const chatSend=document.getElementById('chatSend');
+const chatBody=document.getElementById('chatBody');
 
-chatSend.onclick = () => sendMessage();
-chatInput.onkeypress = e => { if(e.key === "Enter") sendMessage(); };
+chatSend.onclick=()=>sendMessage();
+chatInput.onkeypress=e=>{if(e.key==="Enter")sendMessage();};
 
 function sendMessage(){
-  let msg = chatInput.value.trim();
-  if(!msg) return;
-
-  chatBody.innerHTML += `<div><b>You:</b> ${msg}</div>`;
-  chatInput.value = "";
-
-  let res = findResponse(msg.toLowerCase());
-
-  setTimeout(() => {
-    chatBody.innerHTML += `<div><b>Bot:</b> ${res}</div>`;
-    chatBody.scrollTop = chatBody.scrollHeight;
-  }, 300);
+  let msg=chatInput.value.trim();
+  if(!msg)return;
+  chatBody.innerHTML+=`<div><b>You:</b> ${msg}</div>`;
+  chatInput.value="";
+  let res=findResponse(msg.toLowerCase());
+  setTimeout(()=>{
+    chatBody.innerHTML+=`<div><b>Bot:</b> ${res}</div>`;
+    chatBody.scrollTop=chatBody.scrollHeight;
+  },300);
 }
 
 function findResponse(msg){
@@ -292,7 +346,7 @@ function findResponse(msg){
       if(msg.includes(k)) return rule.response;
     }
   }
-  return "Thanks for your message! We'll get back to you shortly.";
+  return "Thanks for your message! We'll respond shortly.";
 }
 </script>
 
