--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bramos Tree Solution | Charlotte NC Tree Service</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -41,10 +41,10 @@ nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
 .hamburger{display:none;flex-direction:column;gap:6px;cursor:pointer;}
 .hamburger span{width:28px;height:3px;background:#00ff64;}
 
-/* HERO */
+/* HERO (no image — clean dark neon theme) */
 .hero{
   height:85vh;
-  background:url('https://images.unsplash.com/photo-1518611012118-696072aa579a?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+  background:#111;
   position:relative;
   display:flex;
   align-items:center;
@@ -54,7 +54,7 @@ nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
   content:'';
   position:absolute;
   inset:0;
-  background:rgba(0,0,0,0.6);
+  background:rgba(0,0,0,0.5);
 }
 .hero-content{
   position:relative;
@@ -97,7 +97,7 @@ h2{
   text-shadow:0 0 10px #00ff64;
 }
 
-/* WORK GRID */
+/* WORK GRID (with placeholder boxes) */
 .grid{
   width:90%;
   max-width:1100px;
@@ -106,17 +106,31 @@ h2{
   grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
   gap:25px;
 }
-.grid img{
+
+.placeholder-box{
   width:100%;
   height:200px;
-  object-fit:cover;
+  background:#1d1d1d;
+  border:2px dashed #00ff64;
   border-radius:12px;
-  box-shadow:0 0 15px rgba(0,255,100,0.3);
-  transition:.4s;
+  box-shadow:0 0 15px rgba(0,255,100,0.2);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:1.1rem;
+  color:#00ff64;
+  text-transform:uppercase;
+  letter-spacing:1px;
+  opacity:0.7;
+  transition:.3s;
 }
-.grid img:hover{
-  transform:scale(1.05);
+.placeholder-box:hover{
+  opacity:1;
+  transform:scale(1.03);
   box-shadow:0 0 25px #00ff64;
+}
+.placeholder-box::after{
+  content:"Image Placeholder";
 }
 
 /* FOOTER */
@@ -143,14 +157,13 @@ footer{
   transition:0.3s;
 }
 
-/* HIDDEN WHEN MINIMIZED */
 .chat-widget.minimized{
   height:60px;
   width:200px;
   cursor:pointer;
 }
 
-/* VIBRATION */
+/* ATTENTION ANIMATIONS */
 @keyframes attention{
   0%{transform:translateX(0);}
   20%{transform:translateX(-3px);}
@@ -160,7 +173,6 @@ footer{
   100%{transform:translateX(0);}
 }
 
-/* GLOW PULSE */
 @keyframes glow{
   0%{box-shadow:0 0 10px #00ff64;}
   50%{box-shadow:0 0 25px #00ff64;}
@@ -254,19 +266,18 @@ footer{
   <h2>Professional. Fast. Reliable.</h2>
   <p style="max-width:850px;margin:auto;font-size:1.1rem;opacity:0.9;">
     Bramos Tree Solution is a young, modern, high-energy tree service company serving all of Charlotte, NC.
-    We specialize in safe tree removal, trimming, stump grinding, and emergency storm cleanup —
-    with top-tier customer service.
+    We specialize in safe tree removal, trimming, stump grinding, and emergency storm cleanup — with top-tier customer service.
   </p>
 </section>
 
-<!-- ⭐ OUR WORK SECTION (BACK ADDED) -->
+<!-- ⭐ OUR WORK SECTION WITH PLACEHOLDER BOXES -->
 <section id="work">
   <h2>Our Work</h2>
   <div class="grid">
-    <img src="https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=800&q=80">
-    <img src="https://images.unsplash.com/photo-1581091870686-cd229d4ec3cd?auto=format&fit=crop&w=800&q=80">
-    <img src="https://images.unsplash.com/photo-1601987077608-3c2e84e6aa55?auto=format&fit=crop&w=800&q=80">
-    <img src="https://images.unsplash.com/photo-1611765084248-ccffba8c5c2c?auto=format&fit=crop&w=800&q=80">
+    <div class="placeholder-box"></div>
+    <div class="placeholder-box"></div>
+    <div class="placeholder-box"></div>
+    <div class="placeholder-box"></div>
   </div>
 </section>
 
@@ -298,19 +309,13 @@ hamburger.onclick=()=>nav.classList.toggle('open');
 const chatWidget=document.getElementById('chatWidget');
 const toggleChat=document.getElementById('toggleChat');
 
-// toggle chat open/minimize
 toggleChat.onclick=()=>{
   chatWidget.classList.toggle('minimized');
 };
 
 // auto popup then minimize
-setTimeout(()=>{
-  chatWidget.classList.remove('minimized');
-},1000);
-
-setTimeout(()=>{
-  chatWidget.classList.add('minimized');
-},3500);
+setTimeout(()=>{ chatWidget.classList.remove('minimized'); },1000);
+setTimeout(()=>{ chatWidget.classList.add('minimized'); },3500);
 
 // RULE-BASED CHAT
 const rules=[
@@ -318,7 +323,7 @@ const rules=[
   {keywords:["trim","trimming"],response:"Yes, we provide trimming & shaping."},
   {keywords:["stump","grind"],response:"We specialize in stump grinding."},
   {keywords:["storm","emergency"],response:"We offer 24/7 emergency storm cleanup."},
-  {keywords:["estimate","quote"],response:"We offer FREE estimates."}
+  {keywords:["estimate","quote"],response:"We offer FREE estimates!"}
 ];
 
 const chatInput=document.getElementById('chatInput');
