Refactor comments and enhance button in index.html
Updated comments for clarity and added a clickable button.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bramos Tree Solution | Charlotte NC Tree Service</title>
 
+<!-- TREE FAVICON -->
+<link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/808/808569.png">
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
@@ -41,7 +44,7 @@ nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
 .hamburger{display:none;flex-direction:column;gap:6px;cursor:pointer;}
 .hamburger span{width:28px;height:3px;background:#00ff64;}
 
-/* HERO (no image — clean dark neon theme) */
+/* HERO (clean neon — no images) */
 .hero{
   height:85vh;
   background:#111;
@@ -97,7 +100,7 @@ h2{
   text-shadow:0 0 10px #00ff64;
 }
 
-/* WORK GRID (with placeholder boxes) */
+/* WORK GRID (placeholder boxes) */
 .grid{
   width:90%;
   max-width:1100px;
@@ -163,7 +166,7 @@ footer{
   cursor:pointer;
 }
 
-/* ATTENTION ANIMATIONS */
+/* ATTENTION */
 @keyframes attention{
   0%{transform:translateX(0);}
   20%{transform:translateX(-3px);}
@@ -258,7 +261,12 @@ footer{
   <div class="hero-content">
     <h1>Charlotte’s Most Trusted Tree Experts</h1>
     <p>Young • Professional • Fully Insured • Free Estimates</p>
-    <button class="btn" onclick="window.location.href='contact.html'">Get a Free Quote</button>
+
+    <!-- REAL CLICKABLE BUTTON -->
+    <button class="btn" onclick="window.location.href='contact.html'">
+      Get a Free Quote
+    </button>
+
   </div>
 </section>
 
@@ -270,7 +278,6 @@ footer{
   </p>
 </section>
 
-<!-- ⭐ OUR WORK SECTION WITH PLACEHOLDER BOXES -->
 <section id="work">
   <h2>Our Work</h2>
   <div class="grid">
