--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bramos Tree Solution | Charlotte NC Tree Service</title>
 
-<!-- TREE FAVICON -->
+<!-- Tree Favicon -->
 <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/808/808569.png">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@ header{
   padding:15px 0;
   position:sticky;
   top:0;
-  z-index:999;
+  z-index:1000;
 }
 .container{
   width:92%;
@@ -44,23 +44,25 @@ nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
 .hamburger{display:none;flex-direction:column;gap:6px;cursor:pointer;}
 .hamburger span{width:28px;height:3px;background:#00ff64;}
 
-/* HERO (clean neon — no images) */
+/* HERO */
 .hero{
   height:85vh;
   background:#111;
-  position:relative;
   display:flex;
   align-items:center;
   justify-content:center;
+  position:relative;
 }
 .hero::after{
   content:'';
   position:absolute;
   inset:0;
   background:rgba(0,0,0,0.5);
+  z-index:1;
 }
 .hero-content{
   position:relative;
+  z-index:5; /* FIX: ensures button is clickable */
   text-align:center;
   padding:20px;
   animation:fadeIn 1.5s ease;
@@ -73,8 +75,10 @@ nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
 .hero p{
   margin:15px 0;
   font-size:1.2rem;
-  opacity:0.9;
+  opacity:0.9; 
 }
+
+/* CTA Button */
 .btn{
   margin-top:10px;
   background:linear-gradient(90deg,#00ff64,#009944);
@@ -87,8 +91,13 @@ nav a:hover{color:#00ff64;text-shadow:0 0 10px #00ff64;}
   cursor:pointer;
   box-shadow:0 0 20px #00ff64;
   transition:0.3s;
+  position:relative;
+  z-index:20; /* FIX: ensures it's on top of ALL elements */
 }
-.btn:hover{transform:scale(1.05);box-shadow:0 0 30px #00ff64;}
+.btn:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 30px #00ff64;
+}
 
 /* SECTIONS */
 section{padding:70px 0;text-align:center;}
@@ -100,7 +109,7 @@ h2{
   text-shadow:0 0 10px #00ff64;
 }
 
-/* WORK GRID (placeholder boxes) */
+/* WORK GRID */
 .grid{
   width:90%;
   max-width:1100px;
@@ -109,7 +118,6 @@ h2{
   grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
   gap:25px;
 }
-
 .placeholder-box{
   width:100%;
   height:200px;
@@ -132,9 +140,7 @@ h2{
   transform:scale(1.03);
   box-shadow:0 0 25px #00ff64;
 }
-.placeholder-box::after{
-  content:"Image Placeholder";
-}
+.placeholder-box::after{content:"Image Placeholder";}
 
 /* FOOTER */
 footer{
@@ -148,40 +154,39 @@ footer{
 /* CHAT WIDGET */
 .chat-widget{
   position:fixed;
-  bottom:20px;
-  right:20px;
+  bottom:20px !important;
+  right:20px !important;
   width:320px;
   background:#111;
   border:1px solid #00ff64;
   border-radius:12px;
   box-shadow:0 0 25px rgba(0,255,100,0.4);
   overflow:hidden;
-  z-index:999;
-  transition:0.3s;
+  z-index:900; /* FIX: below hero/button */
+  transition:0.3s ease;
 }
-
 .chat-widget.minimized{
-  height:60px;
-  width:200px;
+  height:55px;
+  width:150px;
   cursor:pointer;
+  overflow:hidden;
+}
+.chat-widget.minimized .chat-body,
+.chat-widget.minimized .chat-input{
+  display:none;
 }
 
-/* ATTENTION */
+/* Attention Animations */
 @keyframes attention{
   0%{transform:translateX(0);}
   20%{transform:translateX(-3px);}
   40%{transform:translateX(3px);}
-  60%{transform:translateX(-3px);}
-  80%{transform:translateX(3px);}
-  100%{transform:translateX(0);}
 }
-
 @keyframes glow{
   0%{box-shadow:0 0 10px #00ff64;}
   50%{box-shadow:0 0 25px #00ff64;}
   100%{box-shadow:0 0 10px #00ff64;}
 }
-
 .chat-widget.attention{
   animation:attention .4s ease, glow 2s infinite ease;
 }
@@ -223,11 +228,13 @@ footer{
   font-weight:600;
 }
 
+/* Fade in */
 @keyframes fadeIn{
   from{opacity:0;transform:translateY(20px);}
   to{opacity:1;transform:translateY(0);}
 }
 
+/* MOBILE */
 @media(max-width:768px){
   nav{display:none;flex-direction:column;background:#000;position:absolute;top:60px;right:0;width:200px;padding:20px;}
   nav.open{display:flex;}
@@ -262,7 +269,7 @@ footer{
     <h1>Charlotte’s Most Trusted Tree Experts</h1>
     <p>Young • Professional • Fully Insured • Free Estimates</p>
 
-    <!-- REAL CLICKABLE BUTTON -->
+    <!-- CLICKABLE BUTTON (FIXED) -->
     <button class="btn" onclick="window.location.href='contact.html'">
       Get a Free Quote
     </button>
@@ -293,7 +300,7 @@ footer{
   <p>© 2025 Bramos Tree Solution</p>
 </footer>
 
-<!-- CHAT -->
+<!-- CHAT WIDGET -->
 <div class="chat-widget minimized attention" id="chatWidget">
   <div class="chat-header">
     <span>Chat with us</span>
@@ -307,24 +314,26 @@ footer{
 </div>
 
 <script>
-// MENU
+// Menu Toggle
 const hamburger=document.getElementById('hamburger');
 const nav=document.getElementById('nav');
 hamburger.onclick=()=>nav.classList.toggle('open');
 
-// CHAT WIDGET
+// Chat Widget Logic
 const chatWidget=document.getElementById('chatWidget');
 const toggleChat=document.getElementById('toggleChat');
+
+chatWidget.classList.add('minimized');
 
 toggleChat.onclick=()=>{
   chatWidget.classList.toggle('minimized');
 };
 
-// auto popup then minimize
-setTimeout(()=>{ chatWidget.classList.remove('minimized'); },1000);
-setTimeout(()=>{ chatWidget.classList.add('minimized'); },3500);
+// Auto-popup bottom-right
+setTimeout(()=>chatWidget.classList.remove('minimized'),1200);
+setTimeout(()=>chatWidget.classList.add('minimized'),4200);
 
-// RULE-BASED CHAT
+// Chat Rules
 const rules=[
   {keywords:["remove","tree removal"],response:"Yes! We offer full tree removal."},
   {keywords:["trim","trimming"],response:"Yes, we provide trimming & shaping."},
@@ -349,7 +358,7 @@ function sendMessage(){
   setTimeout(()=>{
     chatBody.innerHTML+=`<div><b>Bot:</b> ${res}</div>`;
     chatBody.scrollTop=chatBody.scrollHeight;
-  },300);
+  },250);
 }
 
 function findResponse(msg){
